--- a/docs/examples/Pulse_Building_Tutorial.ipynb
+++ b/docs/examples/Pulse_Building_Tutorial.ipynb
@@ -6,32 +6,31 @@
    "source": [
     "# Pulsebuilding tutorial\n",
     "\n",
-    "## Table of Contents <a class=\"anchor\" id=\"toc\"></a>\n",
+    "## Table of Contents\n",
     "\n",
-    " * [Lingo](#lingo)\n",
-    " * [Blueprints](#blueprints)\n",
-    "   * [Basic blueprinting](#basicbp)\n",
-    "   * [Markers](#markers)\n",
-    "   * [Modifying blueprints](#bp-modify)\n",
-    "   * [Special segments](#specialsegments)\n",
-    "   * [Timesteps](#timesteps)\n",
+    " * [Lingo](#Lingo)\n",
+    " * [Blueprints](#Blueprints)\n",
+    "   * [Basic blueprinting](#Basic-blueprinting)\n",
+    "   * [Markers](#Markers)\n",
+    "   * [Modifying blueprints](#Modifying-blueprints)\n",
+    "   * [Special segments](#special-segments)\n",
     "\n",
     " * [Elements](#elements)\n",
     " * [Sequences](#sequences)\n",
-    "   * [Tektronix AWG 5014 output](#awg)\n",
-    "     * [Delays and filter compensation](#compensation)\n",
-    "   * [Sequences varying parameters](#seq-vary)\n",
+    "   * [Tektronix AWG 5014 output](#Tektronix-AWG-5014-output)\n",
+    "     * [Delays and filter compensation](#Delays-and-filter-compensation)\n",
+    "   * [Sequences varying parameters](#Sequences-varying-parameters)\n",
     "\n",
-    "## Lingo <a class=\"anchor\" id=\"lingo\"></a>\n",
+    "## Lingo\n",
     "\n",
     "Let's settle on a vocabulary. At the highest level, we construct **sequences**. These sequences will eventually be uploaded to an AWG, e.g. the Tektronix AWG 5014. Each sequence consists of several **elements** than again consist of a number of **channels**. On each channel reside a **waveform** and two **markers**. The waveform and markers may either be added as numpy arrays or as **blueprint**. A blueprint is a set of instructions for making a waveform and two markers and consists of several **segments**\n",
     "\n",
     "That is to say, the food chain goes: segment -> blueprint -> element -> sequence.\n",
     "\n",
     "\n",
-    "### Segments\n",
+    "### Segments:\n",
     "\n",
-    "#### Normal segments\n",
+    "#### Intro to Normal segments:\n",
     "\n",
     "A normal segment consists of a _unique_ name, a function object, a tuple of arguments to the function, and a **duration**. \n",
     "\n",
@@ -43,7 +42,7 @@
     " \n",
     "* The duration is a single number giving the desired duration of the segment in seconds. Some responsibility for making this number sensible with respect to the sample rate rests on the user.\n",
     "\n",
-    "#### Special segments\n",
+    "#### Intro to  Special segments:\n",
     "\n",
     "A special segment has a (protected) name and a number of arguments. So far, two special segments exist.\n",
     " \n",
@@ -51,15 +50,15 @@
     " \n",
     " * `makemeanfit`. Not implemented yet. Will make the mean of the blueprint be a specified number. Will (eventually) exist in several versions, e.g. one achieving the goal by adding an offset, another by adding an appropriate DC segment at the end of the blueprint.\n",
     "\n",
-    "### Blueprints\n",
+    "### Intro to Blueprints:\n",
     "\n",
     "Consist of a number of segments. Has an associated sample rate.\n",
     "\n",
-    "### Elements\n",
+    "### Intro to Elements:\n",
     "\n",
     "Has a number of blueprints on each channel. Can have an arbitraty amount of integer-indexed channels, but the blueprint on each channel must have the same number of points and the same total duration as all the other blueprints.\n",
     "\n",
-    "### Sequences\n",
+    "### Intro to Sequences:\n",
     "\n",
     "Have an associated sample rate. \n",
     "\n"
@@ -89,10 +88,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blueprints <a class=\"anchor\" id=\"blueprints\"></a> \n",
+    "# Blueprints\n",
     "\n",
-    "## Basic blueprinting <a class=\"anchor\" id=\"basicbp\"></a> \n",
-    "([back to ToC](#toc))\n",
+    "## Basic blueprinting\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "In this section we show how to construct basic blueprints. The units of the vertical axis is **volts** and the units of the horizontal axis (the durations) is **seconds**."
    ]
@@ -236,8 +235,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Markers <a class=\"anchor\" id=\"markers\"></a> \n",
-    "([back to ToC](#toc))\n",
+    "## Markers\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "All markers are OFF by default. Markers can be added to a blueprint (switched ON) in two different ways. Either a marker is specified by its ON time in *absolute time* or by its ON time *relative* to a certain segment."
    ]
@@ -374,8 +373,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modifying blueprints <a class=\"anchor\" id=\"bp-modify\"></a>\n",
-    "([back to ToC](#toc))"
+    "## Modifying blueprints\n",
+    "([back to ToC](#Table-of-Contents))"
    ]
   },
   {
@@ -482,8 +481,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Special segments <a class=\"anchor\" id=\"specialsegments\"></a>\n",
-    "([back to ToC](#toc))"
+    "## Special segments\n",
+    "([back to ToC](#Table-of-Contents))"
    ]
   },
   {
@@ -560,8 +559,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Elements <a class=\"anchor\" id=\"elements\"></a>\n",
-    "([back to ToC](#toc))\n",
+    "# Elements\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "Elements are containers containing blueprints. A valid element consists of blueprints that all have the same number of points and the same overall duration."
    ]
@@ -693,8 +692,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequences <a class=\"anchor\" id=\"sequences\"></a>\n",
-    "([back to ToC](#toc))\n",
+    "# Sequences\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "Finally, we have reached the top level of the module: sequences. Unsurprisingly, sequences are containers containing elements. All elements in a sequence must specify the same channels."
    ]
@@ -822,8 +821,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tektronix AWG 5014 output <a class=\"anchor\" id=\"awg\"></a>\n",
-    "([back to ToC](#toc))\n",
+    "## Tektronix AWG 5014 output\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "The sequence object can output a tuple matching the call signature of the QCoDeS Tektronix AWG 5014 driver.\n",
     "\n",
@@ -943,8 +942,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Delays and filter compensation<a class=\"anchor\" id=\"compensation\"></a>\n",
-    "([back to ToC](#toc))\n",
+    "### Delays and filter compensation\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "In a real experimental setting, the signal transmission line may distort and/or delay the pulse sequence. The Sequence object can perform some compensation for this when making the `.awg` file."
    ]
@@ -1009,8 +1008,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sequences varying parameters <a class=\"anchor\" id=\"seq-vary\"></a>\n",
-    "([back to ToC](#toc))\n",
+    "## Sequences varying parameters\n",
+    "([back to ToC](#Table-of-Contents))\n",
     "\n",
     "The module contains a few wrapper functions to easily generate sequences with some parameter(s) varying throughout the sequence. First two examples where a Base element is provided and varied, then an example where an existing Sequence is repeated."
    ]
