Fix type checking of examples

--- a/docs/examples/Making_output_for_Tektronix_AWG70000A.ipynb
+++ b/docs/examples/Making_output_for_Tektronix_AWG70000A.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "##########################\n",
     "# settings\n",
     "\n",
-    "SR = 25e9\n",
+    "SR = int(25e9)\n",
     "t1 = 10e-9  # first wait time (s)\n",
     "ramp_time = 5e-9  # the ramp time (s)\n",
     "t_sine = 25e-9  # the sine time (s)\n",
